--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 	font-family: "EB Garamond", serif;
 
 	width: 600px;
-	word-break: break-all;
+	/*word-break: break-all;*/
 	white-space: normal;
 }
 a {
@@ -14,6 +14,8 @@ a {
 	/*text-decoration-style: wavy;*/
 	/*text-decoration-thickness: 3px;*/
 }
+/* TODO: Different styles for internal and external links
+ * to get the noticeable colours for hyperlinks*/
 
 .list-inline {
 	padding: 0;
